
    * Now uses "AUDIO_S16SYS" when initializing audio system
      (on Linux/Mac/BeOS); helps sound under Linux on Mac hardware.
      Albert Cahalan <albert@users.sourceforge.net>
    
  * Interface improvements:
    -----------------------
    * Middle and right mouse buttons no longer do anything.
      (No reason to teach kids that all the buttons do the same thing!)

    * Thumbnail of selected image now shown on "Erase this image?"
      confirmation pop-up.

    * Printer icons on "Print now?" and "You can't print yet" pop-ups.

    * Icons shown in "Save Over?" and "Save [before opening]" pop-ups.

    * Improved 'rubber band line' and stamp outline colors ("XOR" code)
      to make such lines easier to see on certain colors.
    
    * The "noquit" option now prevents the [Escape] key from quitting
      Tux Paint.  ([Alt]+[F4] and the window close button still work.)

    * Tux Paint can now be quit with [Shift]+[Control]+[Escape], as well.
      (Useful for when "noquit" and "fullscreen" are set, and the
      [Alt]+[F4] combination is not possible.)
      
  * Other improvements:
    -------------------
    * Now printing directly via Postscript.
      (So print command can change from "pngtopnm | pnmtops | lpr" to
      simply "lpr").
      Albert Cahalan <albert@users.sf.net>
    
    * Added beige and tan colors.  Changed "Lime" to "Neon Green."
      Renamed "Fuschia" to "Magenta."  Tweaked some color values.
      Moved grey/silver next to black/white.
      Albert Cahalan <albert@users.sourceforge.net>
 
    * getpixel function now considers edges as extending to infinity
      (to improve Magic tools like 'Blur')
      Albert Cahalan <albert@users.sf.net>

    * getpixel and putpixel functions split into four, one for each
      color depth (1, 2, 3 or 4 bytes per pixel), to reduce BPP tests
      when reading or drawing pixels.

    * drawtext_callback() prototype forces useless arg.; voided it
      Albert Cahalan <albert@users.sf.net>
